2008-11-26  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/: Additional documentation updates.

	* ipmi-sensors/src/ipmi-sensors-reading.c (sensor_reading): Output
	'NA' is sensor scanning is disabled.
	
2008-11-25  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/ipmi_monitoring_sensors.conf.5.pre.in,
	ipmimonitoring/ipmimonitoring_sensors.conf.5.pre.in,
	ipmimonitoring/ipmimonitoring.conf.5.pre.in,
	ipmimonitoring/libipmimonitoring.conf.5.pre.in, : New files.

	* ipmimonitoring/ipmimonitoring.8.pre.in,
	ipmimonitoring/libipmimonitoring.3.pre.in: Update for new manpage.

	* configure.ac, freeipmi.spec.in, ipmimonitoring/Makefile.am:
	Adjust for new manpage.
	
2008-11-24  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-display-common.c
	(ipmi_sensors_get_thresholds): Fix workaround for motherboards w/o
	get sensor thresholds command support.

	* ipmimonitoring/: Add fan transition availability interpretation.
	
	* ipmimonitoring/: Documentation additions and cleanup.

	* libfreeipmi/include/freeipmi/spec/ipmi-sensor-types-spec.h,
	libfreeipmi/src/spec/ipmi-sensor-types-spec.c,
	libfreeipmi/include/freeipmi/cmds/ipmi-pef-and-alerting-cmds.h,
	pef-config/src/pef-config-map.c: Fix typos in sensor types macros
	and strings.

	* ipmi-sensors/src: Fix corner cases in groups
	verification/selection.

	* configure.ac: Update library revisions appropriately.

2008-11-20  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-display-common.c
	(ipmi_sensors_get_thresholds): Fix non-recoverable thresholds
	output corner case.

	* ipmi-sensors/src/ipmi-sensors-simple-display.c
	(sensors_display_simple_full_record): Output something other than
	critical thresholds if critical thresholds are not available.
	
2008-11-20  Albert Chu <chu11@llnl.gov>

	* common/src/toolcommon/tool-fiid-wrappers.h (_FIID_OBJ_SET): New
	macro.

	* common/src/toolcommon/tool-sdr-cache-common.h,
	common/src/toolcommon/tool-sdr-cache-common.c