@@ -4,6 +4,11 @@
 
 	* ipmi-sensors/src/ipmi-sensors-reading.c (sensor_reading): Output
 	'NA' is sensor scanning is disabled.
+
+	*
+	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
+	(_get_sensor_reading): Return 'unreadable sensor' for sensors
+	where sensor scanning is disabled.
 	
 2008-11-25  Albert Chu <chu11@llnl.gov>
 
